--- a/bankpassbook/pom.xml
+++ b/bankpassbook/pom.xml
@@ -4,4 +4,16 @@
   <artifactId>bankpassbook</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>bankpassbook</name>
+  <dependencies>
+  <dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>42.5.0</version>
+</dependency>
+</dependencies>
+  <properties>
+     <maven.compiler.source>1.8</maven.compiler.source>
+     <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+
 </project>
