TRANSACTION AND PASSBOOK MODULE

--- a/bankpassbook/src/main/resources/bank_entity.properties
+++ b/bankpassbook/src/main/resources/bank_entity.properties
@@ -1,4 +1,4 @@
 bankId = 1
-bankName = "Bank of India"
-bankBranch = "Pune Branch"
-bankCity = "Pune"
+bankName = Bank of India
+bankBranch = Pune Branch
+bankCity = Pune
